# base-api

./: .env.exapmle  .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 33e2e4370f52_initial.py
src/: config.py
src/api/: dependencies.py
src/api/v1/: __init__.py  auth.py  me.py
src/application/: __init__.py  auth.py  user.py
src/application/dto/: auth.py  users.py
src/domain/: enum.py  exceptions.py  models.py
src/domain/interfaces/: __init__.py  repository.py  security.py  unit_of_work.py
src/infrastructure/: connect.py  models.py  repository.py  security.py  unit_of_work.py
