[project]
name = "demo-marketplace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "fastapi[standard]>=0.135.3",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "scalar-fastapi>=1.8.1",
    "sqlmodel>=0.0.38",
]
